// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsertBox renders correctly 1`] = `
<styled.div>
  <InputTitle
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Title"
    rows={1}
    value="Learn React"
  />
  <styled.div>
    <Button
      onClick={[Function]}
    >
      DONE
    </Button>
  </styled.div>
</styled.div>
`;

exports[`InsertBox renders with additional class 1`] = `
<styled.div
  className="my-class"
>
  <InputTitle
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Title"
    rows={1}
    value="Learn React"
  />
  <styled.div>
    <Button
      onClick={[Function]}
    >
      DONE
    </Button>
  </styled.div>
</styled.div>
`;
